Update the workshop page

--- a/workshop/index.html
+++ b/workshop/index.html
@@ -44,6 +44,11 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#important-dates">Important dates</a>
         </li>
+
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#call-for-papers">Call for papers</a>
+        </li>
+
         <!--
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#workshop-programme">Workshop programme</a>
@@ -191,34 +196,20 @@
     </section>
     -->
 
-    <!--
     <hr class="m-0">
     <section class="iva-section p-3 p-lg-5 d-flex align-items-center" id="call-for-papers">-->
-      <!-- justify-content-center -->
-      <!--
+      
       <div class="w-100">
         <h2 class="mb-5">Call for papers</h2>
 
         <div class="iva-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="iva-content">
             <h4>Overview</h4>
-            Generating nonverbal behaviours, such as gesticulation, facial expressions and gaze, is of great importance
-            for natural interaction with embodied agents such as virtual agents and social robots. At present, behaviour
-            generation is typically powered by rule-based systems, data-driven approaches, and their hybrids. For
-            evaluation, both objective and subjective methods exist, but their application and validity are frequently a
-            point of contention.<br>
-            <br>
+            <p> GENEA 2022 is the third GENEA workshop and an official workshop of ACM ICMI’22, which will take place either in Bangalore, India, or online. Accepted submissions will be included in the adjunct ACM ICMI proceedings.</p>
 
-            This workshop asks “What will be the behaviour-generation methods of the future? And how can we evaluate
-            these methods using meaningful objective and subjective metrics?” The aim of the workshop is to bring
-            together researchers working on the generation and evaluation of nonverbal behaviours for embodied agents to
-            discuss the future of this field. To kickstart these discussions, we invite all interested researchers to
-            submit a paper for presentation at the workshop.<br>
-            <br>
+            <p>Generating non-verbal behaviours, such as gesticulation, facial expressions and gaze, is of great importance for natural interaction with embodied agents such as virtual agents and social robots. At present, behaviour generation is typically powered by rule-based systems, data-driven approaches, and their hybrids. For evaluation, both objective and subjective methods exist, but their application and validity are frequently a point of contention.</p>
 
-            GENEA 2022 is the second GENEA workshop and an official workshop of ACM ICMI’22, which will take place
-            either in Bangalore, India, or online. Accepted submissions will be included in the adjunct ACM ICMI
-            proceedings.<br>
+            <p>This workshop asks, “What will be the behaviour-generation methods of the future? And how can we evaluate these methods using meaningful objective and subjective metrics?” The aim of the workshop is to bring together researchers working on the generation and evaluation of non-verbal behaviours for embodied agents to discuss the future of this field. To kickstart these discussions, we invite all interested researchers to submit a paper for presentation at the workshop.<p>
             <br>
 
             <h4>Paper topics include (but are not limited to) the following</h4>
@@ -236,21 +227,18 @@
               <li>Guidelines for nonverbal behaviours in human-agent interaction</li>
             </ul>
 
+
             <h4>Submission guidelines</h4>
-            The reviewing will be double blind, so submissions should be anonymous: do not include the authors' names, affiliations or any clearly identifiable information in the paper (including in the Acknowledgments and references). It is appropriate to cite past work of the authors if these citations are treated like any other (e.g., "Smith [5] approached this problem by....") - omit references only if it would be obviously identifying the authors. Paper chairs will desk reject non-anonymous papers after reviewing begins.
-            <br><br>
-            Submitted papers should conform to the latest ACM publication format. All authors should submit manuscripts for review in a double column format to ensure adherence to page limits. Please note that a non-anonymous author block may require a larger space than the anonymized version. For LaTeX templates and examples, please click on the following link: <a href="https://www.acm.org/publications/taps/word-template-workflow" target="_blank">https://www.acm.org/publications/taps/word-template-workflow</a>, download the zip package entitled Primary Article Template - LaTeX, and use the sample-sigconf.tex template with \documentclass[sigconf,review]{acmart} to add line numbers. We suggest you to use the LaTeX templates. You will find Word templates and examples on the same webpage mentioned. Authors who do decide to use the Word template should be made aware that an extra validation step may be required during the camera-ready process.
-            <br><br>
-            We will accept long (8 pages) and short (4 pages) paper submissions, along with posters (3 page papers), all
-            in the double-column ACM conference format. Pages containing only references do not count toward the page
-            limit for any of the paper types. Submissions should be made in PDF format through <a href="https://openreview.net/group?id=ACM.org/ICMI/2021/Workshop/GENEA" target="_blank">OpenReview</a>.
-            <br><br>
-            To encourage authors to make their work reproducible and reward the effort that this requires, we have introduced the <a class="js-scroll-trigger" href="#reproducibility-award">GENEA Workshop Reproducibility Award</a>.
+            <p>Please format submissions for double-blind review according to the ACM conference format.</p>
+
+            <p> We will accept long (8 pages) and short (4 pages) paper submissions, all in the double-column ACM conference format. Pages containing only references do not count toward the page limit for any of the paper types. Submissions should be made in PDF format through OpenReview. </p>
+
+
+            <p>To encourage authors to make their work reproducible and reward the effort that this requires, we have introduced the <a class="js-scroll-trigger" href="#reproducibility-award">GENEA Workshop Reproducibility Award</a>.</p>
           </div>
         </div>
       </div>
     </section>
-  -->
     <!--<hr class="m-0">-->
     <!--
     <section class="iva-section p-3 p-lg-5 d-flex align-items-center" id="reproducibility-award">
@@ -318,6 +306,8 @@
     </div>
     </section>
     --->
+
+    
 
 
 
