--- a/workshop/index.html
+++ b/workshop/index.html
@@ -197,7 +197,7 @@
     -->
 
     <hr class="m-0">
-    <section class="iva-section p-3 p-lg-5 d-flex align-items-center" id="call-for-papers">-->
+    <section class="iva-section p-3 p-lg-5 d-flex align-items-center" id="call-for-papers">
       
       <div class="w-100">
         <h2 class="mb-5">Call for papers</h2>
@@ -205,7 +205,7 @@
         <div class="iva-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="iva-content">
             <h4>Overview</h4>
-            <p> GENEA 2022 is the third GENEA workshop and an official workshop of ACM ICMI’22, which will take place either in Bangalore, India, or online. Accepted submissions will be included in the adjunct ACM ICMI proceedings.</p>
+            <p> GENEA 2022 is the third GENEA workshop and an official workshop of ACM ICMI’22, which will be hybrid: will take place bith in Bangalore, India, and online. Accepted submissions will be included in the adjunct ACM ICMI proceedings.</p>
 
             <p>Generating non-verbal behaviours, such as gesticulation, facial expressions and gaze, is of great importance for natural interaction with embodied agents such as virtual agents and social robots. At present, behaviour generation is typically powered by rule-based systems, data-driven approaches, and their hybrids. For evaluation, both objective and subjective methods exist, but their application and validity are frequently a point of contention.</p>
 
