--- a/workshop/index.html
+++ b/workshop/index.html
@@ -204,13 +204,11 @@
 
         <div class="iva-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="iva-content">
-            <h4>Overview</h4>
-            <p> GENEA 2022 is the third GENEA workshop and an official workshop of ACM ICMI’22, which will be hybrid: will take place bith in Bangalore, India, and online. Accepted submissions will be included in the adjunct ACM ICMI proceedings.</p>
+            <p> GENEA 2022 is the third GENEA workshop and an official workshop of ACM ICMI’22, and will be hybrid: will take place both in Bangalore, India, and online. Accepted workshop submissions will be included in the adjunct ACM ICMI proceedings.</p>
 
             <p>Generating non-verbal behaviours, such as gesticulation, facial expressions and gaze, is of great importance for natural interaction with embodied agents such as virtual agents and social robots. At present, behaviour generation is typically powered by rule-based systems, data-driven approaches, and their hybrids. For evaluation, both objective and subjective methods exist, but their application and validity are frequently a point of contention.</p>
 
             <p>This workshop asks, “What will be the behaviour-generation methods of the future? And how can we evaluate these methods using meaningful objective and subjective metrics?” The aim of the workshop is to bring together researchers working on the generation and evaluation of non-verbal behaviours for embodied agents to discuss the future of this field. To kickstart these discussions, we invite all interested researchers to submit a paper for presentation at the workshop.<p>
-            <br>
 
             <h4>Paper topics include (but are not limited to) the following</h4>
             <ul>
@@ -234,7 +232,7 @@
             <p> We will accept long (8 pages) and short (4 pages) paper submissions, all in the double-column ACM conference format. Pages containing only references do not count toward the page limit for any of the paper types. Submissions should be made in PDF format through OpenReview. </p>
 
 
-            <p>To encourage authors to make their work reproducible and reward the effort that this requires, we have introduced the <a class="js-scroll-trigger" href="#reproducibility-award">GENEA Workshop Reproducibility Award</a>.</p>
+            <p>To encourage authors to make their work reproducible and reward the effort that this requires, we have introduced the <a href="https://genea-workshop.github.io/2021/#reproducibility-award">GENEA Workshop Reproducibility Award</a>.</p>
           </div>
         </div>
       </div>
