Update the dates

--- a/workshop/index.html
+++ b/workshop/index.html
@@ -127,16 +127,20 @@
       <div class="w-100">
         <h2 class="mb-5">Important dates</h2>
 
+        <div class="row">
+          <div class="col">July 26, 2022</div>
+          <div class="col">Abstract deadline</div>
+        </div>
        <div class="row">
-          <div class="col">July 20, 2022</div>
+          <div class="col">July 29, 2022</div>
           <div class="col">Submission deadline</div>
         </div>
         <div class="row">
-          <div class="col">August 10, 2022</div>
+          <div class="col">August 19, 2022</div>
           <div class="col">Notifications</div>
         </div>
         <div class="row">
-          <div class="col">August 17, 2022</div>
+          <div class="col">August 29, 2022</div>
           <div class="col">Camera-ready deadline</div>
         </div>
         <div class="row">
