Add reproducibility award

--- a/workshop/index.html
+++ b/workshop/index.html
@@ -49,6 +49,10 @@
           <a class="nav-link js-scroll-trigger" href="#call-for-papers">Call for papers</a>
         </li>
 
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#reproducibility-award">Reproducibility Award</a>
+        </li>
+
         <!--
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#workshop-programme">Workshop programme</a>
@@ -56,9 +60,7 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#call-for-papers">Call for papers</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#reproducibility-award">Reproducibility Award</a>
-        </li>
+
 
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#invited-speakers">Invited speakers</a>
@@ -241,11 +243,10 @@
         </div>
       </div>
     </section>
-    <!--<hr class="m-0">-->
-    <!--
+
+    <hr class="m-0">    
     <section class="iva-section p-3 p-lg-5 d-flex align-items-center" id="reproducibility-award">
-    --><!-- justify-content-center -->
-      <!--
+
       <div class="w-100">
         <h2 class="mb-5">Reproducibility Award</h2>
         Reproducibility is a cornerstone of the scientific method. Lack of reproducibility is a serious issue in contemporary research which we want to address at our workshop. To encourage authors to make their papers reproducible, and to reward the effort that reproducibility requires, we are introducing the GENEA Workshop Reproducibility Award. All short and long papers presented at the GENEA Workshop will be eligible for this award. Please note that it is the camera-ready version of the paper which will be evaluated for the reward.
@@ -256,11 +257,6 @@
           <li>extent (ideal: all results can be verified)</li>
           <li>data accessibility (ideal: all data used is publicly available)</li>
         </ul>
-        <div style="text-align: center; margin-top: 30px;">
-          This year's award is awarded to: <b>Probabilistic Human-like Gesture Synthesis from Speech using GRU-based WGAN</b> <br> by
-          <i>Bowen Wu, Chaoran Liu, Carlos Ishi, and Hiroshi Ishiguro</i>. <br><br>
-          <img src="img/reproducibility_award_genea_2021.png" alt="reproducibility award" width=600>
-        </div>
       </div>
 
     </section>-->
