--- a/workshop/index.html
+++ b/workshop/index.html
@@ -238,7 +238,7 @@
             <p> We will accept long (8 pages) and short (4 pages) paper submissions, all in the double-column ACM conference format. Pages containing only references do not count toward the page limit for any of the paper types. Submissions should be made in PDF format through OpenReview. </p>
 
 
-            <p>To encourage authors to make their work reproducible and reward the effort that this requires, we have introduced the <a href="https://genea-workshop.github.io/2021/#reproducibility-award">GENEA Workshop Reproducibility Award</a>.</p>
+            <p>To encourage authors to make their work reproducible and reward the effort that this requires, we have introduced the <a class="js-scroll-trigger" href="#reproducibility-award">GENEA Reproducibility Award</a>.
           </div>
         </div>
       </div>
