Add keynotes and their pics

--- a/workshop/index.html
+++ b/workshop/index.html
@@ -62,13 +62,14 @@
         </li>
 
 
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#invited-speakers">Invited speakers</a>
-        </li>-->
+       
         <!--
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#accepted-papers">Accepted papers</a>
         </li>-->
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#invited-speakers">Invited speakers</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#organising-committee">Organising committee</a>
         </li>
@@ -259,44 +260,38 @@
         </ul>
       </div>
 
-    </section>-->
-    <!--
+    </section>
     <hr class="m-0">
     <section class="iva-section p-3 p-lg-5 d-flex align-items-center" id="invited-speakers">
       <div class="w-100">
         <h2 class="mb-5">Invited speakers</h2>
 
-        <h3 class="mt-5" id="hatice_gunes"><a href="https://www.cl.cam.ac.uk/~hg410/">Hatice Gunes (University of Cambridge)</a></h3>
+        <h3 class="mt-5" id="carlos_ishi"><a href="https://dil.atr.jp/~carlos/">Carlos T. Ishi (Hiroshi Ishiguro Laboratories)</a></h3>
         <div class="row">
-          <div class="col-2"><a href="https://www.cl.cam.ac.uk/~hg410/"> <img src="https://www.cl.cam.ac.uk/~hg410/HG2019.jpg"
-            style=" margin-right: 30px; margin-bottom: 10px" class="img-fluid rounded" alt="Hatice Gunes"></a></div>
+          <div class="col-2"><a href="https://dil.atr.jp/~carlos/"> <img src="/2022/img/carlos.jpg"
+            style=" margin-right: 30px; margin-bottom: 10px" class="img-fluid rounded" alt="Carlos T. Ishi"></a></div>
           <div class="col-10">
             <h5>Biography</h5>
-            Hatice Gunes (Senior Member, IEEE) is a Professor with the Department of Computer Science and Technology, University of Cambridge, UK, leading the Affective Intelligence and Robotics (AFAR) Lab. Her expertise is in the areas of affective computing and social signal processing cross-fertilizing research in multimodal interaction, computer vision, signal processing, machine learning and social robotics. Dr Gunes’ team has published over 120 papers in these areas (citations > 5,700) and has received various awards and competitive grants, with funding from the Engineering and Physical Sciences Research Council UK (EPSRC), Innovate UK, British Council, and EU Horizon 2020. Dr Gunes is the former President of the Association for the Advancement of Affective Computing (2017-2019), the General Co-Chair of ACII 2019, and the Program Co-Chair of ACM/IEEE HRI 2020 and IEEE FG 2017. She was the Chair of the Steering Board of IEEE Transactions on Affective Computing in the period of 2017-2019. She has also served as an Associate Editor for IEEE Transactions on Affective Computing, IEEE Transactions on Multimedia, and Image and Vision Computing Journal. In 2019, Dr Gunes has been awarded the prestigious EPSRC Fellowship to investigate adaptive robotic emotional intelligence for wellbeing (2019-2024) and has been named a Faculty Fellow of the Alan Turing Institute – UK’s national centre for data science and artificial intelligence.
+            Carlos T. Ishi received the PhD degree in engineering from The University of Tokyo, Japan. He joined ATR Intelligent Robotics and Communication Labs in 2005, and became the group leader of the Dept. of Sound Environment Intelligence since 2013. He joined the Guardian Robot Project, RIKEN, in 2020. His research topics include analysis and processing of dialogue speech and non-verbal behaviors applied for human-robot interaction.
             <br>
-            <br>
-            <h5>Talk - Data-driven Robot Social Intelligence</h5>
-            Designing artificially intelligent systems and interfaces with socio-emotional skills is a challenging task. Progress in industry and developments in academia provide us a positive outlook, however, the artificial social and emotional intelligence of the current technology is still limited. My lab’s research has been pushing the state of the art in a wide spectrum of research topics in this area, including the  design and creation of new datasets; novel feature representations and learning algorithms for sensing and understanding human nonverbal behaviours in solo, dyadic and group settings; and the data-driven generation of socially appropriate agent behaviours. In this talk, I will present some of my research team’s explorations in these areas, including audio-driven robot upper-body motion synthesis, and a dataset and a continual learning approach for assessing social appropriateness of robot actions.
         </div>
       </div>
 
-        <h3 class="mt-5" id="louis-philippe_morency"><a href="https://www.cs.cmu.edu/~morency/">Louis-Philippe Morency (Carnegie Mellon University)</a></h3>
+        <h3 class="mt-5" id="judith_holler"><a href="https://www.mpi.nl/people/holler-judith"> Judith Holler (Radboud University)</a></h3>
         <div class="row">
-          <div class="col-2"><a href="https://www.cs.cmu.edu/~morency/"><img src="https://www.cs.cmu.edu/~morency/index_files/image001.jpg"
-            style=" margin-right: 30px; margin-bottom: 10px" class="img-fluid rounded" alt="Louis-Philippe Morency"></a></div>
+          <div class="col-2"><a href="https://www.mpi.nl/people/holler-judith"><img src="/2022/img/judith.jpg"
+            style=" margin-right: 30px; margin-bottom: 10px" class="img-fluid rounded" alt="Judith Holler"></a></div>
           <div class="col-10"><h5>Biography</h5>
-            Louis-Philippe Morency is Associate Professor in the Language Technology Institute at Carnegie Mellon University where he leads the Multimodal Communication and Machine Learning Laboratory (MultiComp Lab). He was formerly research faculty in the Computer Sciences Department at University of Southern California and received his Ph.D. degree from MIT Computer Science and Artificial Intelligence Laboratory. His research focuses on building the computational foundations to enable computers with the abilities to analyze, recognize and predict subtle human communicative behaviors during social interactions. He received diverse awards including AI’s 10 to Watch by IEEE Intelligent Systems, NetExplo Award in partnership with UNESCO and 10 best paper awards at IEEE and ACM conferences. His research was covered by media outlets such as Wall Street Journal, The Economist and NPR.
+          Judith Holler is an Associate Professor at the Donders Institute for Brain, Cognition & Behaviour, Radboud University, and affiliated researcher at Max Planck Institute for Psycholinguistics. My research program investigates human language in the very environment in which it has evolved, is acquired, and used most: face-to-face interaction. Within this context, her focus is on the semantics and pragmatics of human communication from a multimodal perspective considering spoken language within the rich, visual infrastructure that embeds it, such as manual gestures, head movements, facial signals, and gaze. The core question her research focuses on is how we encode, decode and align on meaning in such a multimodal environment, and how social cognition and interactional processes (e.g. pragmatic inferencing, communicative intentions, common ground, turn-taking, grounding, recipient design) shape multimodal language and the cognitive processes that underpin it. This will allow us to understand how meaning (from individual semantic constituents to speech acts) is produced and understood within the design space in which human communication typically operates and the constraints and affordances that result for psycholinguistic processing.
             <br>
-            <br>
-            <h5>Talk - Multimodal AI: Learning Nonverbal Signatures</h5>
-            Human face-to-face communication is a little like a dance, in that participants continuously adjust their behaviors based on verbal and nonverbal cues from the social context. Today's computers and interactive devices are still lacking many of these human-like abilities to hold fluid and natural interactions. One such capability is to generate natural-looking gestures when animating a virtual avatar or robot. In this talk, I will present some of our recent work towards learning nonverbal signatures of human speakers. Central to this research problem is the technical challenge of grounding, which links in this case spoken language with generated nonverbal gestures. This is one key step towards our longer-term vision of Multimodal AI, a family of technologies able to analyze, recognize and generate human subtle communicative behaviors in social context.
           </div>
         </div>
       </div>
     </section>
 
-    <hr class="m-0">
+    
   --><!---
+    <hr class="m-0">
     <section class="iva-section p-3 p-lg-5 d-flex align-items-center" id="accepted-papers">
       <div class="w-100">
         <h2 class="mb-5">Accepted papers</h2>
