--- a/workshop/index.html
+++ b/workshop/index.html
@@ -266,7 +266,7 @@
       <div class="w-100">
         <h2 class="mb-5">Invited speakers</h2>
 
-        <h3 class="mt-5" id="carlos_ishi"><a href="https://dil.atr.jp/~carlos/">Carlos T. Ishi (Hiroshi Ishiguro Laboratories)</a></h3>
+        <h3 class="mt-5" id="carlos_ishi"><a href="https://dil.atr.jp/~carlos/">Carlos T. Ishi (RIKEN and ATR)</a></h3>
         <div class="row">
           <div class="col-2"><a href="https://dil.atr.jp/~carlos/"> <img src="/2022/img/carlos.jpg"
             style=" margin-right: 30px; margin-bottom: 10px" class="img-fluid rounded" alt="Carlos T. Ishi"></a></div>
