Add workshop submission link

--- a/workshop/index.html
+++ b/workshop/index.html
@@ -236,7 +236,7 @@
             <h4>Submission guidelines</h4>
             <p>Please format submissions for double-blind review according to the ACM conference format.</p>
 
-            <p> We will accept long (8 pages) and short (4 pages) paper submissions, all in the double-column ACM conference format. Pages containing only references do not count toward the page limit for any of the paper types. Submissions should be made in PDF format through OpenReview. </p>
+            <p> We will accept long (8 pages) and short (4 pages) paper submissions, all in the double-column ACM conference format. Pages containing only references do not count toward the page limit for any of the paper types. Submissions should be made in PDF format through OpenReview using <a href="https://openreview.net/group?id=ACM.org/ICMI/2022/Workshop/GENEA" target="_blank">this URL</a>. </p>
 
 
             <p>To encourage authors to make their work reproducible and reward the effort that this requires, we have introduced the <a class="js-scroll-trigger" href="#reproducibility-award">GENEA Reproducibility Award</a>.
