Link to the project page

--- a/challenge/index.html
+++ b/challenge/index.html
@@ -103,7 +103,8 @@
               <p>The results of the challenge will be presented at <a href="https://genea-workshop.github.io/2022/workshop/" target="_blank">the 3rd GENEA workshop </a> at <a href="https://icmi.acm.org/2022/" target="_blank">ACM ICMI 2022</a>, with accepted challenge papers published in the main ICMI proceedings.</p>
 
               <p>This is the second installment of the GENEA Challenge. You can <a href="https://svito-zar.github.io/GENEAchallenge2020/" target="_blank">read more about the previous GENEA Challenge here</a>.</p>
-	      <p> This challenge is supported Wallenberg AI, Autonomous Systems and Software Program ( <a href="https://wasp-sweden.org/"> WASP </a> ) funded by the Knut and Alice Wallenberg Foundation with in-kind contribution from the <a href="https://www.ea.com/en-gb"> Electronic Arts (EA)</a> R&D department, <a href="https://seed.ea.com/" target="_blank"> SEED </a>. </p> <br>
+	      <p> All the materials derived from the Challenge can be found on <a href="https://youngwoo-yoon.github.io/GENEAchallenge2022"> our official website </a>.  </p>
+              <p> This challenge is supported Wallenberg AI, Autonomous Systems and Software Program ( <a href="https://wasp-sweden.org/"> WASP </a> ) funded by the Knut and Alice Wallenberg Foundation with in-kind contribution from the <a href="https://www.ea.com/en-gb"> Electronic Arts (EA)</a> R&D department, <a href="https://seed.ea.com/" target="_blank"> SEED </a>. </p> <br>
             </p>
             <div class="row justify-content-center">
 
