--- a/challenge/index.html
+++ b/challenge/index.html
@@ -55,6 +55,9 @@
           <a class="nav-link js-scroll-trigger" href="#registration">Registration</a>
         </li>
         
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#data-n-proceedings">Data and proceedings</a>
+        </li>
        
         <!--
         <li class="nav-item">
@@ -76,6 +79,7 @@
           <a class="nav-link js-scroll-trigger" href="#organising-committee">Organising committee</a>
         </li>
         <!--
+
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#program-committee">Program committee</a>
         </li>-->
@@ -537,6 +541,14 @@ The GENEA Challenge seeks to advance scientific knowledge relating to automatic 
     --->
 
 
+    <section class="iva-section p-3 p-lg-5 d-flex align-items-center" id="data-n-proceedings">
+      <div class="w-100">
+        <h2 class="mb-5">Data and proceedings</h2>
+        TBD
+      </div>
+
+    </section>
+    <hr class="m-0">
 
     <hr class="m-0">
     <section class="iva-section p-3 p-lg-5 d-flex align-items-center" id="organising-committee">
