--- a/challenge/index.html
+++ b/challenge/index.html
@@ -544,7 +544,7 @@ The GENEA Challenge seeks to advance scientific knowledge relating to automatic 
     <section class="iva-section p-3 p-lg-5 d-flex align-items-center" id="data-n-proceedings">
       <div class="w-100">
         <h2 class="mb-5">Data and proceedings</h2>
-        TBD
+	<p> All the materials derived from the Challenge can be found on <a href="https://youngwoo-yoon.github.io/GENEAchallenge2022"> our official website </a>.  </p>
       </div>
 
     </section>
