--- a/challenge/index.html
+++ b/challenge/index.html
@@ -168,8 +168,8 @@
           <div class="col"><b>Deadline for camera-ready papers</b></div>
         </div>
         <div class="row">
-          <div class="col"><b>November 7 or 11, 2022</b></div>
-          <div class="col"><b>Challenge presentations at ICMI 2022 (Hybrid)</b></div>
+          <div class="col"><b>November 11, 2022</b></div>
+          <div class="col"><b>Challenge presentations at ICMI 2022 (Virtual)</b></div>
         </div>
 
     </section>
