--- a/workshop/index.html
+++ b/workshop/index.html
@@ -95,7 +95,7 @@
             <!--  -->
 
             <p class="mb-5">
-              <b>Official ICMI 2022 Workshop – November 7-11 (Hybrid)</b><br><br>
+              <b>Official ICMI 2022 Workshop – November 7 (Hybrid)</b><br><br>
               
 
               The GENEA (Generation and Evaluation of Non-verbal Behaviour for Embodied Agents) Workshop
@@ -147,7 +147,7 @@
           <div class="col">Camera-ready deadline</div>
         </div>
         <div class="row">
-          <div class="col">November 7 - 11, 2022</div>
+          <div class="col">November 7, 2022</div>
           <div class="col">Workshop (Hybrid)</div>
         </div>
 
