--- a/workshop/index.html
+++ b/workshop/index.html
@@ -73,11 +73,9 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#organising-committee">Organising committee</a>
         </li>
-        <!--
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#program-committee">Program committee</a>
-        </li>-->
-
+        </li>
       </ul>
     </div>
   </nav>
@@ -418,16 +416,39 @@
     </section>
     <hr class="m-0">
 
-    <!--
+    
     <section class="iva-section p-3 p-lg-5 d-flex align-items-center" id="program-committee">
       <div class="w-100">
         <h2 class="mb-5">Program committee</h2>
-        TBD
+        <ul>
+                  <li>Chaitanya Ahuja (Carnegie Mellon University, United States of America)</li>
+                  <li>Sean Andrist (Microsoft Research, United States of America)</li>
+                  <li>Jonas Beskow (KTH Royal Institute of Technology, Sweden)</li>
+                  <li>Uttaran Bhattacharya (University of Maryland,  United States of America)</li>
+                  <li>Carlos Busso (University of Texas at Dallas, United States of America)</li>
+                  <li>Yingruo Fan (The University of Hong Kong, Hong Kong)</li>
+                  <li>David Greenwood (University of East Anglia,  England)</li>
+                  <li>Dai Hasegawa (Hokkai Gakuen University, Japan)</li>
+                  <li>Carlos Ishi (Advanced Telecommunications Research Institute International, Japan)</li>
+                  <li>Minsu Jang (Electronics and Telecommunications Research Institute, South Korea)</li>
+                  <li>James Kennedy (Futronics NA Corporation, United States of America)</li>
+                  <li>Vladislav Korzun (Moscow Institute of Physics and Technology, Russia)</li>
+                  <li>Nikhil Krishnaswamy (Colorado State University, United States of Americ)</li>
+                  <li>Rachel McDonnell (Trinity College Dublin, Ireland)</li>
+                  <li>Tan Viet Tuyen Nguyen (King's College London, England)</li>
+                  <li>Kunkun Pang (Guangdong Institute of Intelligent Manufacturing, China)</li>
+                  <li>Catherine Pelachaud (Sorbonne University, France)</li>
+                  <li>Tiago Ribeiro (Soul Machines, New Zealand)</li>
+                  <li>Carolyn Saund (University of Glasgow, Scotland)</li>
+                  <li>Hiroshi Shimodaira (University of Edinburgh, Scotland)</li>
+                  <li>Jonathan Windle (University of East Anglia, England)</li>
+                  <li>Bowen Wu (Osaka University, Japan)</li>
+                </ul>
       </div>
 
     </section>
     <hr class="m-0">
-    --->
+    
 
 
   </div>
