--- a/workshop/index.html
+++ b/workshop/index.html
@@ -433,7 +433,7 @@
                   <li>Minsu Jang (Electronics and Telecommunications Research Institute, South Korea)</li>
                   <li>James Kennedy (Futronics NA Corporation, United States of America)</li>
                   <li>Vladislav Korzun (Moscow Institute of Physics and Technology, Russia)</li>
-                  <li>Nikhil Krishnaswamy (Colorado State University, United States of Americ)</li>
+                  <li>Nikhil Krishnaswamy (Colorado State University, United States of America)</li>
                   <li>Rachel McDonnell (Trinity College Dublin, Ireland)</li>
                   <li>Tan Viet Tuyen Nguyen (King's College London, England)</li>
                   <li>Kunkun Pang (Guangdong Institute of Intelligent Manufacturing, China)</li>
