--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>GENEA Challenge 2022</title>
+  <title>GENEA 2022</title>
 
   <!-- Bootstrap core CSS -->
   <link href="/2022/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -78,8 +78,8 @@
 
                           <ul>
 			  <li> <a href="https://genea-workshop.github.io/2021/" target="_blank" style='font-size:2.2em'>2nd GENEA Workshop website (at ICMI 2021)</a></li>
-			  <li> <a href="https://svito-zar.github.io/GENEAchallenge2020/" target="_blank" style='font-size:2.2em'>Results of the GENEA Challenge 2021</a></li>
-			  <li> <a href="https://genea-workshop.github.io/2020/" target="_blank" style='font-size:2.2em'>1st GENEA Workshop and Challenge website (at IVA 2021)</a>
+			  <li> <a href="https://svito-zar.github.io/GENEAchallenge2020/" target="_blank" style='font-size:2.2em'>Results of the GENEA Challenge 2020</a></li>
+			  <li> <a href="https://genea-workshop.github.io/2020/" target="_blank" style='font-size:2.2em'>1st GENEA Workshop and Challenge website (at IVA 2020)</a>
 </li>
 			  </ul>
 		         
