--- a/workshop/index.html
+++ b/workshop/index.html
@@ -294,19 +294,23 @@
         <h2 class="mb-5">Accepted papers</h2>
         
                 <p>
-                  <h4><a href="https://openreview.net/forum?id=ykvm7OLh7B" target="_blank">Probabilistic Human-like Gesture Synthesis from Speech using GRU-based WGAN</a></h4>
-                  <i>Bowen Wu, Chaoran Liu, Carlos Ishi, and Hiroshi Ishiguro</i><br><br>
+                  <h4><a href="https://openreview.net/forum?id=T5ei7IeQUMK" target="_blank">Understanding Interviewees’ Perceptions and Behaviour towards Verbally and Non-verbally Expressive Virtual Interviewing Agents</a></h4>
+                  <i>Jinal Thakkar, Pooja S. B. Rao, Kumar Shubham, Vaibhav Jain, Dinesh Babu Jayagopi</i><br><br>
                 </p>
                   <hr>
                 <p>
-                  <h4><a href="https://openreview.net/forum?id=GjjPtEVdSLB" target="_blank">Influence of Movement Energy and Affect Priming on the Perception of Virtual Characters Extroversion and Mood</a></h4>
-                  <i>Tanja Schneeberger, Fatima Ayman Aly, Daksitha Withanage Don, Katharina Gies, Zita Zeimer, Fabrizio Nunnari, and Patrick Gebhard</i><br><br>
+                  <h4><a href="https://openreview.net/forum?id=GjjPtEVdSLB" target="_blank">Emotional Respiration Speech Dataset</a></h4>
+                  <i>Rozemarijn Roes, Francisca Pessanha, Almila Akdag</i><br><br>
                 </p>
                 <hr>
-                <p><h4><a href="https://openreview.net/forum?id=o8CpxaBurZQ" target="_blank">Crossmodal clustered contrastive learning: Grounding of spoken language to gesture</a></h4>
-                  <i>Dong Won Lee, Chaitanya Ahuja, and Louis-Philippe Morency</i><br><br>
+                <p><h4><a href="https://openreview.net/forum?id=o8CpxaBurZQ" target="_blank">Automatic facial expressions, gaze direction and head movements generation of a virtual agent</a></h4>
+                  <i>Alice Delbosc, Stéphane Ayache, Magalie Ochs</i><br><br>
                 </p>
 
+                <hr>
+                <p><h4><a href="https://openreview.net/forum?id=o8CpxaBurZQ" target="_blank">Can you tell that I'm confused? An overhearer study for German backchannels by an embodied agent</a></h4>
+                  <i>Isabel Donya Meywirth, Jana Götze</i><br><br>
+                </p>
     </div>
     </section>
     
