Update workshop papers links

--- a/workshop/index.html
+++ b/workshop/index.html
@@ -299,16 +299,16 @@
                 </p>
                   <hr>
                 <p>
-                  <h4><a href="https://openreview.net/forum?id=GjjPtEVdSLB" target="_blank">Emotional Respiration Speech Dataset</a></h4>
+                  <h4><a href="https://openreview.net/forum?id=vaOobiePUy" target="_blank">Emotional Respiration Speech Dataset</a></h4>
                   <i>Rozemarijn Roes, Francisca Pessanha, Almila Akdag</i><br><br>
                 </p>
                 <hr>
-                <p><h4><a href="https://openreview.net/forum?id=o8CpxaBurZQ" target="_blank">Automatic facial expressions, gaze direction and head movements generation of a virtual agent</a></h4>
+                <p><h4><a href="https://openreview.net/forum?id=TmR8Q20jL-" target="_blank">Automatic facial expressions, gaze direction and head movements generation of a virtual agent</a></h4>
                   <i>Alice Delbosc, Stéphane Ayache, Magalie Ochs</i><br><br>
                 </p>
 
                 <hr>
-                <p><h4><a href="https://openreview.net/forum?id=o8CpxaBurZQ" target="_blank">Can you tell that I'm confused? An overhearer study for German backchannels by an embodied agent</a></h4>
+                <p><h4><a href="https://openreview.net/forum?id=by_w1j6XAwr" target="_blank">Can you tell that I'm confused? An overhearer study for German backchannels by an embodied agent</a></h4>
                   <i>Isabel Donya Meywirth, Jana Götze</i><br><br>
                 </p>
     </div>
