--- a/challenge/index.html
+++ b/challenge/index.html
@@ -543,7 +543,7 @@ The GENEA Challenge seeks to advance scientific knowledge relating to automatic 
                 </p>
                   <hr>
                 <p>
-                  <h4><a href="https://openreview.net/forum?id=RZP6nErM2Xa" target="_blank">UEA Digital Humans entry to the GENEA Challenge 2022</a></h4>
+                  <h4><a href="https://openreview.net/pdf?id=RZP6nErM2Xa" target="_blank">UEA Digital Humans entry to the GENEA Challenge 2022</a></h4>
                   <i>Jonathan Windle, David Greenwood, Sarah Taylor</i><br><br>
                 </p>
                 <hr>
@@ -556,6 +556,33 @@ The GENEA Challenge seeks to advance scientific knowledge relating to automatic 
                     <h4><a href="https://openreview.net/pdf?id=zEqdFwAPhhO" target="_blank">The DeepMotion entry to the GENEA Challenge 2022</a></h4>
                     <i>Shuhong Lu, Andrew Feng</i><br><br>
                   </p>
+                  
+                <hr>
+                <p>
+                  <h4><a href="https://openreview.net/pdf?id=-2HZD-e6pX7W" target="_blank">Hybrid Seq2Seq Architecture for 3D Co-Speech Gesture Generation</a></h4>
+                  <i>Khaled Saleh</i><br><br>
+                </p>
+                <hr>
+                <p>
+                   <h4><a href="https://openreview.net/pdf?id=gMTaia--AB2" target="_blank">The IVI Lab entry to the GENEA Challenge 2022 -- A Tacotron2 Based Method for Co-Speech Gesture Generation With Locality-Constraint Attention Mechanism</a></h4>
+                   <i>Che-Jui Chang, Sen Zhang, Mubbasir Kapadia</i><br><br>
+                 </p>
+                 <hr>
+                 <p>
+                    <h4><a href="https://openreview.net/pdf?id=AYMDEx97qPN" target="_blank">TransGesture: Autoregressive Gesture Generation with RNN-Transducer</a></h4>
+                    <i>Naoshi Kaneko, Yuna Mitsubayashi, Geng Mu</i><br><br>
+                  </p>
+                  <hr>
+                  <p>
+                     <h4><a href="https://openreview.net/pdf?id=fO_Q4q1dFAA" target="_blank">Exemplar-based Stylized Gesture Generation from Speech: An Entry to the GENEA Challenge 2022</a></h4>
+                     <i>Saeed Ghorbani, Ylva Ferstl, Marc-André Carbonneau</i><br><br>
+                   </p>
+                   <hr>
+                   <p>
+                      <h4><a href="https://openreview.net/pdf?id=uX86IlhiHNx" target="_blank">ReCell: replicating recurrent cell for auto-regressive pose generation</a></h4>
+                      <i>Vladislav Korzun, Anna Beloborodova, Arkady Iliin</i><br><br>
+                    </p>
+                  
 
     </div>
     </section>
