--- a/workshop/index.html
+++ b/workshop/index.html
@@ -159,14 +159,22 @@
       <div class="w-100">
         <h2 class="mb-5">Planned Workshop programme</h2>
         <h4>All times in India Standard Time</h4>
-        <div>Note, all times are in the <a href="https://everytimezone.com/?t=63684a80" target="_blank">India Standard timezone</a>. The workshop will take place virtually over Zoom on November 7th. <br><br></div>
+        <div>Note, all times are in the <a href="https://everytimezone.com/s/97f68314" target="_blank">India Standard timezone</a>. The workshop will take place virtually over Zoom on November 7th. <br><br></div>
         <div class="row">
             <div class="col">14:30&nbsp;-&nbsp;14:45</div>
             <div class="col-10">Opening statement</div>
         </div>
         <div class="row">
+            <div class="col">14:45&nbsp;-&nbsp;15:30</div>
+            <div class="col-10">Keynote presentation by Carlos T.Ishi</div>
+        </div>
+        <div class="row">
+            <div class="col">15:40&nbsp;-&nbsp;17:00</div>
+            <div class="col-10">Workshop paper presentations</div>
+        </div>
+        <div class="row">
           <ul style="list-style: none">
-            <li><span style="margin-right: 10px;">08:50</span> Wu et al. <a href="https://openreview.net/forum?id=ykvm7OLh7B" target="_blank">Probabilistic Human-like Gesture Synthesis from Speech using GRU-based WGAN</a></li>
+            <li><span style="margin-right: 10px;"> </span> <a href="https://openreview.net/pdf?id=T5ei7IeQUMK" target="_blank">Understanding Interviewees’ Perceptions and Behaviour towards Verbally and Non-verbally Expressive Virtual Interviewing Agents</a> by Thakkar et al.</li>
             <li><span style="margin-right: 10px;">09:05</span> Schneeberger et al. <a href="https://openreview.net/forum?id=GjjPtEVdSLB" target="_blank">Influence of Movement Energy and Affect Priming on the Perception of Virtual Characters Extroversion and Mood</a></li>
             <li><span style="margin-right: 10px;">09:20</span> Lee et al. <a href="https://openreview.net/forum?id=o8CpxaBurZQ" target="_blank">Crossmodal clustered contrastive learning: Grounding of spoken language to gesture</a></li>
           </ul>
