--- a/workshop/index.html
+++ b/workshop/index.html
@@ -174,13 +174,14 @@
         </div>
         <div class="row">
           <ul style="list-style: none">
-            <li><span style="margin-right: 10px;"> </span> <a href="https://openreview.net/pdf?id=T5ei7IeQUMK" target="_blank">Understanding Interviewees’ Perceptions and Behaviour towards Verbally and Non-verbally Expressive Virtual Interviewing Agents</a> by Thakkar et al.</li>
-            <li><span style="margin-right: 10px;">09:05</span> Schneeberger et al. <a href="https://openreview.net/forum?id=GjjPtEVdSLB" target="_blank">Influence of Movement Energy and Affect Priming on the Perception of Virtual Characters Extroversion and Mood</a></li>
-            <li><span style="margin-right: 10px;">09:20</span> Lee et al. <a href="https://openreview.net/forum?id=o8CpxaBurZQ" target="_blank">Crossmodal clustered contrastive learning: Grounding of spoken language to gesture</a></li>
+            <li><span style="margin-right: 10px;"> </span> <a href="https://openreview.net/pdf?id=T5ei7IeQUMK" target="_blank">Understanding Interviewees’ Perceptions and Behaviour towards Verbally and Non-verbally Expressive Virtual Interviewing Agents</a> by Jinal Thakkar, Pooja S. B. Rao, Kumar Shubham, Vaibhav Jain, Dinesh Babu Jayagopi</li>
+            <li><span style="margin-right: 10px;"> </span> <a href="https://openreview.net/pdf?id=vaOobiePUy" target="_blank">Emotional Respiration Speech Dataset</a> by Rozemarijn Roes, Francisca Pessanha, Almila Akdag</li>
+            <li><span style="margin-right: 10px;"> </span> <a href="https://openreview.net/pdf?id=TmR8Q20jL-" target="_blank">Automatic facial expressions, gaze direction and head movements generation of a virtual agent</a> by Alice Delbosc, Stéphane Ayache, Magalie Ochs</li>
+            <li><span style="margin-right: 10px;"> </span> <a href="https://openreview.net/pdf?id=by_w1j6XAwr" target="_blank">Can you tell that I'm confused? An overhearer study for German backchannels by an embodied agent</a> by Isabel Donya Meywirth, Jana Götze</li>
           </ul>
         </div>
         <div class="row">
-          <div class="col">09:35&nbsp;-&nbsp;09:50</div>
+          <div class="col">17:00&nbsp;-&nbsp;17:15</div>
           <div class="col-10">Break (Using gather.town)</div>
         </div>
         <div class="row">
