--- a/workshop/index.html
+++ b/workshop/index.html
@@ -185,30 +185,21 @@
           <div class="col-10">Break (Using gather.town)</div>
         </div>
         <div class="row">
-          <div class="col">09:50&nbsp;-&nbsp;10:30</div>
-          <div class="col-10"><a href="#louis-philippe_morency" class="js-scroll-trigger">Keynote 2 (Louis-Philippe Morency)</a></div>
+          <div class="col">17:15&nbsp;-&nbsp;18:00</div>
+          <div class="col-10">Keynote presentation by Judith Holler</div>
         </div>
         <div class="row">
-          <div class="col">10:30&nbsp;-&nbsp;10:45</div>
-          <div class="col-10">Break (Using gather.town)</div>
+          <div class="col">18:00&nbsp;-&nbsp;18:25</div>
+          <div class="col-10">Group discussion</div>
         </div>
         <div class="row">
-          <div class="col">10:45&nbsp;-&nbsp;10:50</div>
-          <div class="col-10"><a href="#reproducibility-award" class="js-scroll-trigger">Reproducibility Award</a> announcement</div>
-        </div>
-        <div class="row">
-          <div class="col">10:50&nbsp;-&nbsp;11:50</div>
-          <div class="col-10">Group discussions</div>
-        </div>
-        <div class="row">
-          <div class="col">11:50&nbsp;-&nbsp;11:55</div>
+          <div class="col">18:25&nbsp;-&nbsp;18:30</div>
           <div class="col-10">Closing remarks</div>
         </div>
         <div class="row">
-          <div class="col">12:00&nbsp;-&nbsp;</div>
+          <div class="col">18:30&nbsp;-&nbsp;</div>
           <div class="col-10">Informal mingle</div>
         </div>
-
       </div>
     </section>
 
