Update workshop website

--- a/workshop/index.html
+++ b/workshop/index.html
@@ -45,13 +45,8 @@
           <a class="nav-link js-scroll-trigger" href="#important-dates">Important dates</a>
         </li>
         
-        
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#workshop-programme">Workshop programme</a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#call-for-papers">Call for papers</a>
         </li>
 
         <li class="nav-item">
@@ -169,12 +164,16 @@
             <div class="col-10">Keynote presentation by Carlos T.Ishi</div>
         </div>
         <div class="row">
+          <div class="col">15:30&nbsp;-&nbsp;15:40</div>
+          <div class="col-10">Break (Optional socialisation on gather.town)</div>
+        </div>
+        <div class="row">
             <div class="col">15:40&nbsp;-&nbsp;17:00</div>
             <div class="col-10">Workshop paper presentations</div>
         </div>
         <div class="row">
           <ul style="list-style: none">
-            <li><span style="margin-right: 10px;"> </span> <a href="https://openreview.net/pdf?id=T5ei7IeQUMK" target="_blank">Understanding Interviewees’ Perceptions and Behaviour towards Verbally and Non-verbally Expressive Virtual Interviewing Agents</a> by Jinal Thakkar, Pooja S. B. Rao, Kumar Shubham, Vaibhav Jain, Dinesh Babu Jayagopi</li>
+            <li><span style="margin-right: 10px;"> </span> <a href="https://openreview.net/pdf?id=T5ei7IeQUMK" target="_blank">Understanding Interviewees’ Perceptionsß and Behaviour towards Verbally and Non-verbally Expressive Virtual Interviewing Agents</a> by Jinal Thakkar, Pooja S. B. Rao, Kumar Shubham, Vaibhav Jain, Dinesh Babu Jayagopi</li>
             <li><span style="margin-right: 10px;"> </span> <a href="https://openreview.net/pdf?id=vaOobiePUy" target="_blank">Emotional Respiration Speech Dataset</a> by Rozemarijn Roes, Francisca Pessanha, Almila Akdag</li>
             <li><span style="margin-right: 10px;"> </span> <a href="https://openreview.net/pdf?id=TmR8Q20jL-" target="_blank">Automatic facial expressions, gaze direction and head movements generation of a virtual agent</a> by Alice Delbosc, Stéphane Ayache, Magalie Ochs</li>
             <li><span style="margin-right: 10px;"> </span> <a href="https://openreview.net/pdf?id=by_w1j6XAwr" target="_blank">Can you tell that I'm confused? An overhearer study for German backchannels by an embodied agent</a> by Isabel Donya Meywirth, Jana Götze</li>
@@ -182,7 +181,7 @@
         </div>
         <div class="row">
           <div class="col">17:00&nbsp;-&nbsp;17:15</div>
-          <div class="col-10">Break (Using gather.town)</div>
+          <div class="col-10">Break (Optional socialisation on gather.town)</div>
         </div>
         <div class="row">
           <div class="col">17:15&nbsp;-&nbsp;18:00</div>
