Add reproducibility announcement

--- a/workshop/index.html
+++ b/workshop/index.html
@@ -193,7 +193,7 @@
         </div>
         <div class="row">
           <div class="col">18:25&nbsp;-&nbsp;18:30</div>
-          <div class="col-10">Closing remarks</div>
+          <div class="col-10">Reproducibility award and Closing remarks</div>
         </div>
         <div class="row">
           <div class="col">18:30&nbsp;-&nbsp;</div>
