Try to add the logo image

--- a/workshop/index.html
+++ b/workshop/index.html
@@ -82,7 +82,7 @@
       <div class="w-100">
         <div class="row">
           <div class="col-md-9 col-sm-12">
-            <h1 class="mb-2">GENEA Workshop 2022
+            <h1 class="mb-2"> <img src="/2022/img/GENEA_logo.png"  class="img-fluid rounded" class="mt-2" alt="GENEA"> Workshop 2022
             </h1>
 
             <div class="subheading mb-5">Generation and Evaluation of Non-verbal Behaviour for Embodied Agents</div>
