--- a/workshop/index.html
+++ b/workshop/index.html
@@ -82,8 +82,12 @@
       <div class="w-100">
         <div class="row">
           <div class="col-md-9 col-sm-12">
-            <h2 class="mb-2"> <img src="/2022/img/GENEA_logo.png"  class="img-fluid rounded" class="mt-2" width=300 alt="GENEA"> Workshop 2022
-            </h2>
+            <div> <img src="/2022/img/GENEA_logo.png"  class="img-fluid rounded" class="mt-2" width=300 alt="GENEA"> </div>
+            <div>
+                <h2 class="mb-2">
+                 Workshop 2022
+                </h2>
+            </div>
 
             <div class="subheading mb-5">Generation and Evaluation of Non-verbal Behaviour for Embodied Agents</div>
             <!--  -->
