--- a/workshop/index.html
+++ b/workshop/index.html
@@ -82,7 +82,7 @@
       <div class="w-100">
         <div class="row">
           <div class="col-md-9 col-sm-12">
-            <div> <img src="/2022/img/GENEA_logo.png"  class="img-fluid rounded" class="mt-2" width=300 alt="GENEA"> </div>
+            <div> <img src="/2022/img/GENEA_logo.png"  class="img-fluid rounded" class="mt-2" width=300 alt="GENEA" title="GENEA"> </div>
             <div>
                 <h2 class="mb-2">
                  Workshop 2022
